--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # site settings
-title: Valueable Musings
+title: Valuable Musings
 subtitle: by Adam Secada
 email: amsecada(at)gmail(dot)com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: AI, Defi, and Other Awesomeness.
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
