--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # site settings
-title: Valuable Musings
+title: Incite Insight
 subtitle: by Adam Secada
 email: amsecada(at)gmail(dot)com
-description: AI, Defi, and Other Awesomeness.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
+description: to know about AI, DeFI, and Other Acronyms.
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 
@@ -14,8 +14,8 @@ country: United States of America
 phone: 
 
 # homepage tiles
-tiles-source: pages # accepts "posts" or "pages"
-tiles-count: 6
+tiles-source: posts # accepts "posts" or "pages"
+tiles-count: 4
 
 # social settings (key must match name of font awesome icon)
 # see https://fontawesome.com/icons?d=gallery&p=2&s=brands
